# Cytochrome_SV

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  setup.py
Experiment_data/DCV/: X183A 200.ids  X183A 25.ids
Experiment_data/Nick_19_1_21/: Cyt_27Hz_1_cv_current  Cyt_27Hz_1_cv_voltage  Cyt_27Hz_2_cv_current  Cyt_27Hz_2_cv_voltage  Cyt_36Hz_1_cv_current  Cyt_36Hz_1_cv_voltage  Cyt_36Hz_2_cv_current  Cyt_36Hz_2_cv_voltage  Cyt_45Hz_1_cv_current  Cyt_45Hz_1_cv_voltage  Cyt_45Hz_2_cv_current  Cyt_45Hz_2_cv_voltage  Cyt_54Hz_1_cv_current  Cyt_54Hz_1_cv_voltage  Cyt_54Hz_2_cv_current  Cyt_54Hz_2_cv_voltage  Cyt_63Hz_1_cv_current  (+19 more)
SV_paper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: DCV_param_scans.py  SV_param_scans.py  SV_simulation_example.py  all_experiments_dispersion.py  cyt_fitting_1.py  cyt_fitting_2.py  cyt_fitting_3.py  cyt_fitting_4.py  dcv_fitting_1.py  dcv_fitting_2.py  dcv_fitting_3.py  dcv_subtraction.py  dispersion_class.py  dynamic_surface_process_brent.cpp  harmonics_plotter.py  image_tex_edited.tex  image_tex_test.tex  image_tex_test_param_col.tex  kinetic_information.py  matrixmultiply_test.py  multiplot_demonstration.py  multiplotter.py  params_class.py  pybamm_solve.py  python_NR.py  ramped_fitting.py  ramped_fitting_2.py  ramped_fitting_3.py  ramped_harmonic_magnitudes_param_scans.py  ramped_harmonic_param_scans.py  ramped_harmonic_param_scans_resistance.py  ramped_kinetics.py  ramped_test.py  ramped_test_2.py  ramped_test_3.py  requirements.txt  results.txt  scipy_solver_class.py  set_test.py  single_e_class_unified.py  (+7 more)
(+265 files in other folders)
